[gd_scene load_steps=3 format=3 uid="uid://c3e7tp3iagm06"]

[ext_resource type="Script" uid="uid://baspsd37ntw8p" path="res://scripts/hud.gd" id="1_arym5"]
[ext_resource type="PackedScene" uid="uid://cdn0watck3k5w" path="res://elements/ship_hud.tscn" id="2_ygjos"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_arym5")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBTop" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="PlayerNick" type="Label" parent="MarginContainer/HBTop"]
layout_mode = 2
text = "Player Name"

[node name="PlayerColor" type="ColorRect" parent="MarginContainer/HBTop"]
custom_minimum_size = Vector2(17, 0)
layout_mode = 2

[node name="HBBotton" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="NextShip" type="Button" parent="MarginContainer/HBBotton"]
layout_mode = 2
text = "Next ship"

[node name="ShipHud" parent="MarginContainer/HBBotton/NextShip" instance=ExtResource("2_ygjos")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -904.0
offset_right = -4.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="EndTurn" type="Button" parent="MarginContainer/HBBotton"]
layout_mode = 2
text = "End turn"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="MarginContainer/HBBotton/NextShip" to="." method="_on_next_ship_pressed"]
[connection signal="pressed" from="MarginContainer/HBBotton/EndTurn" to="." method="_on_end_turn_pressed"]
